[tool.poetry]
name = "tut2"
version = "0.4.2"
description = "Effortless one-click time tracking"
authors = ["Martin Grill <you@example.com>"]
license = "GPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.1"
flask-debugtoolbar = "^0.16.0"
flask-login = "^0.6.3"
pymongo = "^4.10.1"
email-validator = "^2.2.0"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"

[tool.poetry.group.runtime.dependencies]
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
